--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "react": "^18.3.1",
+    "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
@@ -21,6 +23,7 @@
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
